* Store RegExp patterns created while executing Element#removeClassName in a cache. [jddalton, Garrett Smith, kangax, YUI Team]

* Move `borderWidth`, `marginWidth`, `paddingWidth`, and height equivalents from Element#getStyle to Element#getDimensions. [jddalton]

* Optimize Element traversal methods `ancestors`, `next`, `nextSiblings`, `previous`, `previousSiblings`, `siblings`, and `up`. [jddalton, joneff, kangax]

* Add support for the MSXML2.XMLHTTP ActiveXObject because Microsoft.XMLHTTP is deprecated. [MooTools LH #739] [jddalton, lukasbuenger, Scott Kyle]

* Change Fuse.Version, Fuse.ScriptFragment and Fuse.JSONFilter to camelCase to be consistent with the rest of the codebase. [jddalton]

* Absorb pseudo private style helper methods into Element#getStyle and cleanup style.js and position.js. [jddalton]

* Add extraneous semicolons to make JSLint happy. [Diego Perini]

* Fix Fuse.Object.isSameOrigin() unit test when running from rake. [Diego Perini, jddalton]

* Implemented Element.getDimensions() options argument. [FuseJS LH #6] [Joe Gornick, jddalton]

* Stop Element#isVisible unit test from failing because IE6 doesn't respect 0px dimensions. [jddalton]

* Fix bugs/typos/unit tests in the Fuse.Ajax classes. [Diego Perini, jddalton]

* Ensure line breaks in the Fuse.Console output display correctly for IE6. [jddalton]

* Cleanup and simplify the Fuse.Console class. [jddalton]

* Minor code cleanup and add missing semicolon to Fuse.Ajax.Responder.register(). [Diego Perini, jddalton]

* Ensure the catch-all of Fuse.Object.hasKey() won't error if the object doesn't have a constructor property. [Garrett Smith, jddalton]

* Rename all occurrences of `.Plugin` to `.plugin`. [jddalton, kangax]

* Rename Fuse.Exception to Fuse.Console and add support Opera and Jaxer consoles. [FuseJS LH #52] [jddalton, Mark Caudill, kangax]

* Remove `strict` flag from the `contains` methods and allow native/sandboxed object instances to match primitive values. [jddalton]
