@@ -1,3 +1,5 @@
+* unit test: Correct Element#getStyle width/height test in IE6. [jddalton]
+
 * Store RegExp patterns created while executing Element#removeClassName in a cache. [jddalton, Garrett Smith, kangax, YUI Team]
 
 * Move `borderWidth`, `marginWidth`, `paddingWidth`, and height equivalents from Element#getStyle to Element#getDimensions. [jddalton]
